force-app/main/default/objects/RecordCloneSettings__mdt/RecordCloneSettings__mdt.object-meta.xml
<CustomObject>
    <label>RecordCloneSettings</label>
</CustomObject>