force-app/main/default/objects/RecordCloneSettings__mdt/fields/ChildRecordNameType__c.field-meta.xml
<!-- 
  Copyright (c) 2020, salesforce.com, inc.
  All rights reserved.
  SPDX-License-Identifier: BSD-3-Clause
  For full license text, see LICENSE.txt file in the repo root or https://opensource.org/licenses/BSD-3-Clause 
-->
<CustomField>
    <fullName>ChildRecordNameType__c</fullName>
    <label>Child Record Name Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>[Child Record Name]</fullName>
                <default>true</default>
                <label>[Child Record Name]</label>
            </value>
            <value>
                <fullName>Cloned - [Child Record Name]</fullName>
            </value>
            <value>
                <fullName>Cloned - [Child Record Name] - [YYYY/mm/dd HH:ii]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>