force-app/main/default/objects/RecordCloneSettings__mdt/fields/ChildRelationshipNames__c.field-meta.xml
<!-- 
  Copyright (c) 2020, salesforce.com, inc.
  All rights reserved.
  SPDX-License-Identifier: BSD-3-Clause
  For full license text, see LICENSE.txt file in the repo root or https://opensource.org/licenses/BSD-3-Clause 
-->
<CustomField>
    <fullName>ChildRelationshipNames__c</fullName>
    <description>child relationship names. comma separated</description>
    <label>Child Relationship Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>