force-app/main/default/objects/RecordCloneSettings__mdt/fields/ObjectName__c.field-meta.xml
<!-- 
  Copyright (c) 2020, salesforce.com, inc.
  All rights reserved.
  SPDX-License-Identifier: BSD-3-Clause
  For full license text, see LICENSE.txt file in the repo root or https://opensource.org/licenses/BSD-3-Clause 
-->
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>The target sObject API name to be cloned</description>
    <label>ObjectName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>